--- a/test/fixtures/prompt_templates.yml
+++ b/test/fixtures/prompt_templates.yml
@@ -2,10 +2,10 @@
 
 one:
   name: MyString
-  type: 1
+  prompt_template_type: 1
   user_id: 1
 
 two:
   name: MyString
-  type: 1
+  prompt_template_type: 1
   user_id: 1
