--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,4 @@
 # Ignore application configuration
 /config/application.yml
 
-!/config/local_env.yml
-
-config/local_env.yml
+/config/local_env.yml
